--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" placeholder="Enter your username">
+            </div>
+            <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password">
             </div>
@@ -22,7 +24,7 @@
 
         <div class="button-group ">
             <button id="login">Login</button>
-            <button id="regis" >Register</button>
+            <a href="register.html"><button id="regis" >Register</button></a>
         </div>
         
     </div>
