Added navbar & fixed the design.

--- a/logout.html
+++ b/logout.html
@@ -6,16 +6,22 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#">View Establishments</a>
+        <a href="#">Search Establishments</a>
+        <a href="#">Search Establishments</a>
+        <a href="#">Reviews</a>
+        
+        <a href="register.css">Register account</a>
+        <a href="login.css">Login</a>
+        <a href="logout.css">Logout</a>
+        
     </div>
     <div class="logout-box">
         <h1>Logout</h1>
         <p>Are you sure you want to log out?</p>
         <div class="button-group">
-            <a href="#" class="logout-button">Yes</a>
-            <a href="#" class="cancel-button">Cancel</a>
+            <a href="" class="logout-button">Yes</a>
+            <a href="" class="cancel-button">Cancel</a>
         </div>
     </div>
 </body>
