--- a/register.html
+++ b/register.html
@@ -6,9 +6,15 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#">View Establishments</a>
+        <a href="#">Search Establishments</a>
+        <a href="#">Search Establishments</a>
+        <a href="#">Reviews</a>
+        
+        <a href="register.css">Register account</a>
+        <a href="login.css">Login</a>
+        <a href="logout.css">Logout</a>
+        
     </div>
     <div class="register-box">
         <h1>Register</h1>
