--- a/logout.html
+++ b/logout.html
@@ -6,14 +6,15 @@
 </head>
 <body>
     <div class="navbar">
+        <img src="images/logowhite.png" class="logo">
         <a href="#">View Establishments</a>
         <a href="#">Search Establishments</a>
         <a href="#">Search Establishments</a>
         <a href="#">Reviews</a>
         
-        <a href="register.css">Register account</a>
-        <a href="login.css">Login</a>
-        <a href="logout.css">Logout</a>
+        <a href="register.html">Register account</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
         
     </div>
     <div class="logout-box">
