Right-aligned Navigation Bar
Brute force method by percentage margin. Needs to be replaced, look up right aligned nav bar.

--- a/establishmentreviews.html
+++ b/establishmentreviews.html
@@ -142,7 +142,7 @@
     </div>
 
     <div id="page_navigation">
-        <a href="establishment_reviews_page_2.html">Next Page</a>
+        <div><a href="establishment_reviews_page_2.html">Next Page</a></div>
     </div>
 </body>
 
