--- a/ownerprofile.html
+++ b/ownerprofile.html
@@ -4,62 +4,81 @@
         <link rel="stylesheet" href="ownerprofile.css">
     </head>
     <body>
-        <h1 id="header">OWNER PROFILE</h1>
-        <img id="ownerpfp" src="images/ownerpfp.jpg">
-        <div id="profilepane">
-            <br>
-            <span id="ownername">Miguel Ramos @miguelito</span> <img src="images/verified.png" id="verified">
-            <br>
-            <span id="ownertitle">Owner of Hatdog Eatery</span>
-            <br>
-            <span id="ownerbio">| CEO @HatdogEatery 🎩 | Crafting gourmet hotdog experiences with passion & precision. 🌟 Join me as we redefine flavor one bite at a time. #HotdogPerfection #GourmetEats #CEOLife</span>
+        <div class="navbar">
+            <img src="images/logowhite.png" class="logo">
+            <a href="#">View Establishments</a>
+            <a href="#">Search Establishments</a>
+            <a href="establishmentreviews.html">Reviews</a>
+            <a href="register.html">Register account</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
         </div>
+
+        <div id="totality">
+        <h1 id="header">OWNER PROFILE</h1>
+        <div id="titular">
+            <img id="ownerpfp" src="images/ownerpfp.jpg">
+            <div>
+                <div id="profilepane">
+                    <br>
+                    <span id="ownername">Miguel Ramos @miguelito</span> <img src="images/verified.png" id="verified">
+                    <br>
+                    <span id="ownertitle">Owner of Hatdog Eatery</span>
+                    <br>
+                    <span id="ownerbio">| CEO @HatdogEatery 🎩 | Crafting gourmet hotdog experiences with passion & precision. 🌟 Join me as we redefine flavor one bite at a time. #HotdogPerfection #GourmetEats #CEOLife</span>
+            </div>
+            
+        </div>
+        </div>
+        
         <div id="responses">
+            <br>
+             <hr>
             <div class="response">
                 <img class="pfp" src="images/pfp2.jpg">
-                <span class="name">Hot Dawg @hotdogenjoyer</span>
+                <span class="name">Hot Dawg <a href="">@hotdogenjoyer</a></span>
                 <br>
                 <span class="title">The hotdogs are amazing!</span>
-                <span class="rating"> 5 out of 5 </span>
-                <br>
+                <span class="rating"> 5★ out of 5★ </span>
+                <br> <br>
                 <span class="content">Thank you for bringing such perfection into this planet. The tenderness of your hotdogs are immaculate. The service was also really adequate.</span>
                 <br>
                 <span class="likes">Helpful: 332 | Unhelpful: 11</span>
-                <br>
+                <br><br>
                 <span class="responsetitle">Owner Response:</span>
-                <br>
+                <br>    
                 <span class="ownerrespo">Thank you for leaving us with a good review! Hatdog Eatery will never stop giving you hotdog enjoyers what you need!</span>
                 <br>
                 <span class="likes">Helpful: 229 | Unhelpful: 10</span>
             </div>
             <div class="response">
                 <img class="pfp" src="images/pfp3.jpg">
-                <span class="name">Dwayne Wade @dwaynewade4</span>
+                <span class="name">Dwayne Wade <a href="">@dwaynewade4</a></span>
                 <br>
                 <span class="title">'Twas Aight.</span>
-                <span class="rating"> 4 out of 5</span>
-                <br>
+                <span class="rating"> 4★ out of 5★</span>
+                <br><br>
                 <span class="content">Hotdogs are a meh for me when looking at things from an economic standpoint. They're literally cancerous. But hey, you gotta do what you gotta do, and you did really good.</span>
                 <br>
                 <span class="likes">Helpful: 243 | Unhelpful: 151</span>
-                <br>
+                <br><br>
                 <span class="responsetitle">Owner Response:</span>
                 <br>
                 <span class="ownerrespo">As there is high demand for our hotdogs, our duty of serving the people with hotdogs with high quality service is our top priority.</span>
-                <br>
+                <br>    
                 <span class="likes">Helpful: 722 | Unhelpful: 59</span>
             </div>
             <div class="response">
                 <img class="pfp" src="images/pfp4.jpg">
-                <span class="name">Level 100 Hotdog Enthusiast @weratehotdogs</span>
-                <br>
+                <span class="name">Level 100 Hotdog Enthusiast <a href="">@weratehotdogs</a></span>
+                <br><br>    <br><br>
                 <span class="title">This was the worst hotdog experience I've ever had</span>
-                <span class="rating"> 0 out of 5</span>
+                <span class="rating"> 0★ out of 5★</span>
                 <br>
                 <span class="content">First of all, the line took hours and I didn't know why when I was literally going to be the next one on the cash register. After I got my order, it really took more than an hour for your crew to prep me a meal. Also, the wait wasn't worth it, imagine waiting for around an hour for a dry hotdog???</span>
                 <br>
                 <span class="likes">Helpful: 999 | Unhelpful: 112</span>
-                <br>
+                <br><br>
                 <span class="responsetitle">Owner Response:</span>
                 <br>
                 <span class="ownerrespo">We sincerely apologize for your inconvenience. Thanks for buying though!</span>
@@ -67,5 +86,6 @@
                 <span class="likes">Helpful: 101 | Unhelpful: 952</span>
             </div>
         </div>
+    </div>
     </body>
 </html>
