--- a/public/register.html
+++ b/public/register.html
@@ -7,11 +7,9 @@
 <body>
     <div class="navbar">
         <img src="images/logowhite.png" class="logo">
-        <a href="#">View Establishments</a>
-        <a href="#">Search Establishments</a>
-        <a href="#">Search Establishments</a>
-        <a href="#">Reviews</a>
-        
+        <a href="establishmentreviews.html">View Establishments</a>
+        <a href="search.html">Search Establishments</a>
+        <a href="establishmentreviews.html">Reviews</a>
         <a href="register.html">Register account</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
