--- a/public/register.html
+++ b/public/register.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title>Register</title>
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
     <div class="navbar">
         <img src="images/logowhite.png" class="logo">
         <a href="establishmentreviews.html">View Establishments</a>
         <a href="search.html">Search Establishments</a>
-        <a href="establishmentreviews.html">Reviews</a>
+        <a href="public/reviews.html">Reviews</a>
         <a href="register.html">Register account</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+        <a href="public/login.html">Login</a>
+        <a href="public/logout.html">Logout</a>
         
     </div>
     <div class="register-box">
