--- a/establishmentreviews.html
+++ b/establishmentreviews.html
@@ -14,10 +14,10 @@
         <img src="images/logowhite.png" class="logo">
         <a href="establishmentreviews.html">View Establishments</a>
         <a href="search.html">Search Establishments</a>
-        <a href="establishmentreviews.html">Reviews</a>
+        <a href="public/reviews.html">Reviews</a>
         <a href="register.html">Register account</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+        <a href="public/login.html">Login</a>
+        <a href="public/logout.html">Logout</a>
     </div>
 
 
