--- a/public/reviews.html
+++ b/public/reviews.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Group 3 S20">
     <link rel="stylesheet" type="text/css" href="css/establishmentreviews.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/reviews.js" defer></script>
 </head>
 
 <body>
@@ -14,9 +16,10 @@
         <img src="images/logowhite.png" class="logo">
         <a href="establishmentreviews.html">View Establishments</a>
         <a href="search.html">Search Establishments</a>
-        <a href="establishmentreviews.html">Reviews</a>
+        <a href="public/reviews.html">Reviews</a>
         <a href="register.html">Register account</a>
-        <a href="logout.html">Logout</a>
+        <a href="public/login.html">Login</a>
+        <a href="public/logout.html">Logout</a>
     </div>
 
 
@@ -141,8 +144,10 @@
                     </div>
                 </div>
             
+            <div>
             <textarea id="review" name="review" rows="20" cols="70" placeholder="Please remember to be courteous and conscientious in your language">
             </textarea>
+            </div>
 
             <br><br>
 
